# Compiler2026

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: DEVELOPMENT_PLAN.md
src/: main.cpp
src/backend/riscv/: emit.cpp  emit.hpp
src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp  symbol.cpp  symbol.hpp  token.hpp  type.cpp  type.hpp
src/ir/: builder.cpp  builder.hpp  ir.cpp  ir.hpp
src/support/: diagnostic.cpp  diagnostic.hpp
tests/: run_all.sh  run_backend.sh  run_functional.sh  run_ir.sh  run_lexer.sh  run_parser.sh  run_public_functional.sh  run_public_smoke.sh  run_riscv.sh  run_runtime.sh  run_sema.sh  run_smoke.sh
tests/backend/: array1.sy  array2.sy  array_param.sy  array_param2.sy  control.sy  global_array.sy  global_array2.sy  int_arith.sy  short_circuit.sy
tests/ir/: global.sy
tests/lexer/: comment.sy  number.sy  string.sy  token_basic.sy
tests/parser/: control.sy  decl.sy  function.sy  precedence.sy
tests/runtime/: int_io.sy  sylib.c
tests/sema/: invalid_call.sy  invalid_undeclared.sy  valid.sy
